--- a/.github/workflows/renovate.yml
+++ b/.github/workflows/renovate.yml
@@ -1,5 +1,9 @@
 name: Renovate
 
+permissions:
+  contents: write
+  pull-requests: write
+
 on:
   workflow_dispatch:
 
@@ -18,11 +22,17 @@ jobs:
       #       -v /path/to/your/config.js:/usr/src/app/config.js \
       #       renovate/renovate
 
-      - name: Run Renovate
-        uses: renovatebot/github-action@v41.0.13
-        env:
-          RENOVATE_REPOSITORIES: ${{ github.repository }}
-          LOG_LEVEL: debug
-        with:
-          configurationFile: .github/renovate.json
-          token: ${{ secrets.GITHUB_TOKEN }}
+      - name: Test
+        run: |
+          gh auth login --with-token <<< "${{ secrets.GITHUB_TOKEN }}"
+          #gh pr comment 21 --body "hello" -R mthalman/dotnet-docker
+          gh pr merge 21 -R mthalman/dotnet-docker --squash
+
+      # - name: Run Renovate
+      #   uses: renovatebot/github-action@v41.0.13
+      #   env:
+      #     RENOVATE_REPOSITORIES: ${{ github.repository }}
+      #     LOG_LEVEL: debug
+      #   with:
+      #     configurationFile: .github/renovate.json
+      #     token: ${{ secrets.GITHUB_TOKEN }}
