--- a/.github/workflows/renovate.yml
+++ b/.github/workflows/renovate.yml
@@ -15,24 +15,11 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
 
-      # - name: Run Renovate
-      #   run: |
-      #     docker run --rm \
-      #       -v ${{ github.workspace }}:/usr/src/app \
-      #       -v /path/to/your/config.js:/usr/src/app/config.js \
-      #       renovate/renovate
-
-      - name: Test
-        run: |
-          gh auth login --with-token <<< "${{ secrets.GITHUB_TOKEN }}"
-          #gh pr comment 21 --body "hello" -R mthalman/dotnet-docker
-          gh pr merge 21 -R mthalman/dotnet-docker --squash
-
-      # - name: Run Renovate
-      #   uses: renovatebot/github-action@v41.0.13
-      #   env:
-      #     RENOVATE_REPOSITORIES: ${{ github.repository }}
-      #     LOG_LEVEL: debug
-      #   with:
-      #     configurationFile: .github/renovate.json
-      #     token: ${{ secrets.GITHUB_TOKEN }}
+      - name: Run Renovate
+        uses: renovatebot/github-action@v41.0.13
+        env:
+          RENOVATE_REPOSITORIES: ${{ github.repository }}
+          LOG_LEVEL: debug
+        with:
+          configurationFile: .github/renovate.json
+          token: ${{ secrets.GITHUB_TOKEN }}
