--- a/tests/Microsoft.DotNet.Docker.Tests/Microsoft.DotNet.Docker.Tests.csproj
+++ b/tests/Microsoft.DotNet.Docker.Tests/Microsoft.DotNet.Docker.Tests.csproj
@@ -13,6 +13,7 @@
     <PackageReference Include="Polly.Core" Version="8.4.1" />
     <PackageReference Include="SharpCompress" Version="0.29.0" />
     <PackageReference Include="Shouldly" Version="4.3.0" />
+    <PackageReference Include="Valleysoft.DockerfileModel" Version="1.0.0" />
     <PackageReference Include="xunit" Version="2.4.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.5">
       <PrivateAssets>all</PrivateAssets>
