--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -4,5 +4,6 @@
       ":disableDependencyDashboard"
     ],
     "prHourlyLimit": 0,
-    "prConcurrentLimit": 0
+    "prConcurrentLimit": 0,
+    "recreateWhen": "always"
   }
