update token var

--- a/.github/workflows/renovate.yml
+++ b/.github/workflows/renovate.yml
@@ -20,7 +20,7 @@ jobs:
         env:
           RENOVATE_REPOSITORIES: ${{ github.repository }}
           LOG_LEVEL: debug
-          RENOVATE_FORK_TOKEN: ${{ secrets.FORK_PAT }}
+          RENOVATE_FORK_TOKEN: ${{ secrets.FORK_PAT_FULL }}
         with:
           configurationFile: .github/renovate.json
           token: ${{ secrets.GITHUB_TOKEN }}
