--- a/eng/pipelines/renovate.yml
+++ b/eng/pipelines/renovate.yml
@@ -16,6 +16,8 @@ jobs:
       --env LOG_LEVEL=debug
       --env RENOVATE_FORK_TOKEN
       --env RENOVATE_TOKEN
+      --env RENOVATE_CONFIG_FILE=/config/renovate.json
+      --volume $(Build.SourcesDirectory)/eng/renovate.json:/config/renovate.json
       --rm
       ghcr.io/renovatebot/renovate:39
     env:
