--- a/eng/pipelines/renovate.yml
+++ b/eng/pipelines/renovate.yml
@@ -13,11 +13,13 @@ jobs:
   - checkout: self
   - script: >
       docker run
-      --env LOG_LEVEL=debug
+      --env RENOVATE_REPOSITORIES
       --env RENOVATE_FORK_TOKEN
       --env RENOVATE_TOKEN
+      --env LOG_LEVEL=debug
       --env RENOVATE_CONFIG_FILE=/config/renovate.json
       --volume $(Build.SourcesDirectory)/eng/renovate.json:/config/renovate.json
+      --volume /tmp:/tmp
       --rm
       ghcr.io/renovatebot/renovate:39
     env:
