define runtime-like environment

--- a/eng/renovate.json
+++ b/eng/renovate.json
@@ -1,9 +1,17 @@
 {
-  "extends": [
-    "config:best-practices",
-    ":disableDependencyDashboard"
-  ],
   "prHourlyLimit": 0,
   "prConcurrentLimit": 0,
-  "recreateWhen": "always"
+  "recreateWhen": "always",
+  "packageRules": [
+    {
+      "groupName": "Pin build container images",
+      "matchPaths": [
+        "eng/pipelines/common/templates/pipeline-with-resources.yml"
+      ],
+      "matchDatasources": [
+        "docker"
+      ],
+      "pinDigests": true
+    }
+  ]
 }
