--- a/eng/renovate.json
+++ b/eng/renovate.json
@@ -5,7 +5,8 @@
   "onboarding": false,
   "requireConfig": false,
   "extends": [
-    "config:recommended"
+    "config:recommended",
+    ":disabledependencyDashboard"
   ],
   "packageRules": [
     {
