Update versioning scheme

--- a/eng/renovate.json
+++ b/eng/renovate.json
@@ -17,7 +17,8 @@
       "matchDatasources": [
         "docker"
       ],
-      "pinDigests": true
+      "pinDigests": true,
+      "versioning": "loose"
     }
   ]
 }
